force-app/main/default/objects/Trigger_Rule__c/Trigger_Rule__c.object-meta.xml
<CustomObject>
    <description>Определяет для какого объекта и при выполнении каких критериев будет производиться дальнейшее действие.</description>
    <label>Trigger Rule</label>
    <nameField>
        <displayFormat>TR-{00000}</displayFormat>
        <label>Trigger Rule Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Trigger Rules</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>