force-app/main/default/objects/Trigger_Rule__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>NAME</columns>
    <columns>Object_Api_Name__c</columns>
    <columns>Field_Name__c</columns>
    <columns>Operator__c</columns>
    <columns>Field_Value__c</columns>
    <columns>Survey__c</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
</ListView>